# jenkins-casc-poc-project

./: CMakeLists.txt  Jenkinsfile  README.md
src/: good_bye.cpp  hello.cpp
src/utils/: greetings.cpp  greetings.h
test/utils/: test.cpp
